--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,13 @@
 PORT=8088
-SHOPIFY_CLIENT_SECRET=your-client-secret
-# Add other environment variables here as needed
-# SHOPIFY_API_KEY=your_shopify_api_key
-# SHOPIFY_API_SECRET=your_shopify_api_secret
-# DATABASE_URL=your_database_url
+SHOPIFY_CLIENT_ID=233cd1468252f202c26245ba69810acd
+SHOPIFY_CLIENT_SECRET=dc574b3905a4c14356ce3d79d4d95a4f
+
+CLIENT_APP_URL=https://ultimate-pixel.diengv.com
+
+# Database Configuration
+DB_HOST=localhost
+DB_PORT=5433
+DB_USERNAME=postgres
+DB_PASSWORD=untimate
+DB_NAME=untimate
+NODE_ENV=development
