--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,9 @@ DB_USERNAME=postgres
 DB_PASSWORD=untimate
 DB_NAME=untimate
 NODE_ENV=development
+
+
+#for clint
+VITE_APP_NAME="Untimate Pixel"
+VITE_APP_DOMAIN=ultimate-pixel.diengv.com
+VITE_APP_API_ENDPOINT=https://ultimate-pixel-svr.diengv.com/api
